[metadata]
name = cefrpy
version = 1.0.1
author = Maxim Belikov
author_email = maximax6767@gmail.com
description = Python package for analyzing words based on the CEFR level.
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data = True

[options.packages.find]
where = src